--- a/src/app/views/user/user-settings/user-settings.component.scss
+++ b/src/app/views/user/user-settings/user-settings.component.scss
@@ -88,7 +88,7 @@
         height: 85px;
         margin: 0 auto;
         max-width: 200px;
-        @include truncate-owerflowing-text;
+        @include wrap-long-words;
       }
 
       .user-profile-subheader-info-success-msg {
